Add the bazel ci file, lol

--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -1,18 +1,27 @@
 ---
 buildifier: latest
 tasks:
+  # Tests are currently non-hermetic and depend upon a cargo binary, hence the shell_commands.
+  # TODO(acmcarther): Fix
   # TODO(acmcarther): Add check to verify that examples are up-to-date.
   ubuntu1804:
+    shell_commands:
+      - "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
     build_targets:
       - "..."
     test_targets:
       - "..."
   windows:
+    shell_commands:
+      - "curl.exe --proto '=https' --tlsv1.2 -sSf https://win.rustup.rs/"
+      - "rustup-init.exe -y --default-host x86_64-pc-windows-msvc --default-toolchain nightly"
     build_targets:
       - "..."
     test_targets:
       - "..."
   macos:
+    shell_commands:
+      - "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
     build_targets:
       - "..."
     test_targets:
