Escape the escape character

--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -25,7 +25,7 @@ tasks:
     shell_commands:
       - "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
       - ". $HOME/.cargo/env"
-      - "PATH=$PATH\:/$HOME/.cargo/bin ; export PATH "
+      - "PATH=$PATH\\:/$HOME/.cargo/bin ; export PATH "
     build_targets:
       - "..."
     test_targets:
