--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -7,10 +7,8 @@ tasks:
   ubuntu1804:
     shell_commands:
       - "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
-      - "echo \". $HOME/.cargo/env\" >> ~/.profile"
-      - ". ~/.profile"
-    environment:
-      - "PATH=$PATH\\:/$HOME/.cargo/bin"
+    test_flags:
+      - "--test_env=CARGO=$HOME/.cargo/bin/cargo"
     build_targets:
       - "..."
     test_targets:
@@ -27,8 +25,8 @@ tasks:
     shell_commands:
       - "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
       - ". $HOME/.cargo/env"
-    environment:
-      - "PATH=$PATH\\:/$HOME/.cargo/bin"
+    test_flags:
+      - "--test_env=CARGO=$HOME/.cargo/bin/cargo"
     build_targets:
       - "..."
     test_targets:
