remove extra line, maybe fix windows

--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -17,6 +17,8 @@ tasks:
     batch_commands:
       - "curl.exe https://win.rustup.rs/ -o rustup-init.exe"
       - "rustup-init.exe -y --default-host x86_64-pc-windows-msvc --default-toolchain nightly"
+    test_flags:
+      - "--test_env=CARGO=%USERPROFILE%\.cargo\\bin\\cargo.exe"
     build_targets:
       - "..."
     test_targets:
@@ -24,7 +26,6 @@ tasks:
   macos:
     shell_commands:
       - "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
-      - ". $HOME/.cargo/env"
     test_flags:
       - "--test_env=CARGO=$HOME/.cargo/bin/cargo"
     build_targets:
