--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         rust:
           - stable
-          - 1.46.0
+          - 1.45.0
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -30,6 +30,8 @@ jobs:
       matrix:
         rust:
           - stable
+          # 1.45 triggers bug in parse_raze_settings_any_package
+          # with settings_packages.len() == 0
           - 1.46.0
     steps:
       - uses: actions/checkout@v2
@@ -42,3 +44,47 @@ jobs:
         with:
           command: test
           args: --manifest-path impl/Cargo.toml
+
+  fmt:
+    name: Rustfmt
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust:
+          # The rustfmt.toml appears to use nightly only features
+          - nightly-2021-01-31
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+      - run: rustup component add rustfmt
+      - uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --manifest-path impl/Cargo.toml --all -- --check
+
+  # TODO: enable when clippy lints are fixed.  There's enough that
+  # it didn't make sense to change all of them right now.
+  # clippy:
+  #   name: Clippy
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       rust:
+  #         - stable
+  #         - 1.45.0
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions-rs/toolchain@v1
+  #       with:
+  #         profile: minimal
+  #         toolchain: ${{ matrix.rust }}
+  #         override: true
+  #     - run: rustup component add clippy
+  #     - uses: actions-rs/cargo@v1
+  #       with:
+  #         command: clippy
+  #         args: --manifest-path impl/Cargo.toml -- -D warnings
