Rework planning to use resolve tree and not packages
There are a range of subtle and irritating bugs that stem from
attempting to work with renames from the package set provided by cargo
metadata.

Fortunately, recent versions of cargo metadata provide a limited version
of the resolve nodes, both as the original node ids and as a newer set
providing both rename and targeting information.

As such we can (hopefully) simplify crate -> dep node resolution, remove
a bunch of subtle aliasing bugs.

Fixes #241, fixes #269, fixes #270, resolves #144, resolves #187

--- a/impl/src/rendering/templates/partials/build_script.template
+++ b/impl/src/rendering/templates/partials/build_script.template
@@ -73,8 +73,8 @@ cargo_build_script(
     {% for targeted_dep in crate.targeted_deps %} + selects.with_or({
         # {{ targeted_dep.target }}
         (
-    {%- for condition in targeted_dep.conditions %}
-            "{{ condition }}",
+    {%- for platform_target in targeted_dep.platform_targets %}
+          "@rules_rust//rust/platform:{{platform_target}}",
     {%- endfor %}
         ): [
     {%- for dependency in targeted_dep.deps.build_dependencies %}
