--- a/impl/src/rendering/templates/workspace.BUILD.template
+++ b/impl/src/rendering/templates/workspace.BUILD.template
@@ -4,34 +4,19 @@ package(default_visibility = ["//visibility:public"])
 licenses([
     "notice",  # See individual crates for specific licenses
 ])
-{%- if crates %}
+{%- if aliases %}
 
 # Aliased targets
-{%- for crate in crates %}
-{%- if crate.is_workspace_member_dependency and crate.lib_target_name %}
-{%- set crate_name_sanitized = crate.pkg_name | replace(from="-", to="_") %}
+{%- for alias in aliases %}
 alias(
-    name = "{{crate_name_sanitized}}",
-    actual = "{{crate.workspace_path_to_crate}}:{{crate_name_sanitized}}",
+    name = "{{alias.alias}}",
+    actual = "{{alias.target}}",
     tags = [
         "cargo-raze",
         "manual",
     ],
 )
-{%  endif %}
-{%- for aliased_target in crate.raze_settings.extra_aliased_targets %}
-alias(
-    # Extra aliased target, from raze configuration
-    # N.B.: The exact form of this is subject to change.
-    name = "{{aliased_target}}",
-    actual = "{{crate.workspace_path_to_crate}}:{{aliased_target}}",
-    tags = [
-        "cargo-raze",
-        "manual",
-    ],
-)
-{%  endfor %}
-{%- endfor %}
+{% endfor %}
 {%- else %}
 
 # No targets defined
