--- a/impl/src/rendering/templates/partials/targeted_dependencies.template
+++ b/impl/src/rendering/templates/partials/targeted_dependencies.template
@@ -1,8 +1,8 @@
 {% for targeted_dep in crate.targeted_deps %} + selects.with_or({
         # {{ targeted_dep.target }}
         (
-{%- for condition in targeted_dep.conditions %}
-            "{{ condition }}",
+{%- for platform_target in targeted_dep.platform_targets %}
+          "@rules_rust//rust/platform:{{platform_target}}",
 {%- endfor %}
         ): [
 {%- for dependency in targeted_dep.deps.dependencies %}
