--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -1,5 +1,7 @@
 ---
-buildifier: latest
+buildifier:
+  version: latest
+  warnings: "all"
 tasks:
   # TODO(acmcarther): Add check to verify that examples are up-to-date.
   ubuntu1804:
