--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -1,12 +1,13 @@
 ---
 buildifier: latest
 tasks:
-  # TODO(acmcarther): Add check to verify that examples are up-to-date.
-  ubuntu1804:
+  ubuntu2004:
     build_targets:
       - "..."
     test_targets:
       - "..."
+    run_targets:
+      - "//tools:examples_check"
   windows:
     build_targets:
       - "..."
