Add a cleaner way for users to include cargo-raze as a Bazel repository

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -5,7 +5,7 @@ alias(
 )
 
 alias(
-    name = "cargo_raze_bin",
+    name = "raze",
     actual = "//impl:cargo_raze_bin",
     visibility = ["//visibility:public"],
 )
