Disable windows for now

--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -13,16 +13,16 @@ tasks:
       - "..."
     test_targets:
       - "..."
-  windows:
-    batch_commands:
-      - "curl.exe https://win.rustup.rs/ -o rustup-init.exe"
-      - "rustup-init.exe -y --default-host x86_64-pc-windows-msvc --default-toolchain nightly"
-    test_flags:
-      - "--test_env=CARGO=%USERPROFILE%\\.cargo\\bin\\cargo.exe"
-    build_targets:
-      - "..."
-    test_targets:
-      - "..."
+# windows:
+#   batch_commands:
+#     - "curl.exe https://win.rustup.rs/ -o rustup-init.exe"
+#     - "rustup-init.exe -y --default-host x86_64-pc-windows-msvc --default-toolchain nightly"
+#   test_flags:
+#     - "--test_env=CARGO=%USERPROFILE%\\.cargo\\bin\\cargo.exe"
+#   build_targets:
+#     - "..."
+#   test_targets:
+#     - "..."
   macos:
     shell_commands:
       - "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
