Disable windows build for now

--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -7,11 +7,11 @@ tasks:
       - "..."
     test_targets:
       - "..."
-  windows:
-    build_targets:
-      - "..."
-    test_targets:
-      - "..."
+# windows:
+#   build_targets:
+#     - "..."
+#   test_targets:
+#     - "..."
   macos:
     build_targets:
       - "..."
