--- a/.bazelci/presubmit.yml
+++ b/.bazelci/presubmit.yml
@@ -3,14 +3,13 @@ buildifier:
   version: latest
   warnings: "all"
 tasks:
-  ubuntu2004:
+  # TODO(acmcarther): Add check to verify that examples are up-to-date.
+  ubuntu1804:
     build_targets:
       - "..."
     test_targets:
       - "..."
-    run_targets:
-      - "//tools:examples_check"
-# windows
+# windows:
 #   build_targets:
 #     - "..."
 #   test_targets:
