Add workflow for using cargo-raze through Bazel (#379)
* Add a cleaner way for users to include cargo-raze as a Bazel repository

* Reduced redundancy in bzl files

* Added `bin` alias for `cargo_raze_bin`

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -5,7 +5,13 @@ alias(
 )
 
 alias(
-    name = "cargo_raze_bin",
+    name = "raze",
+    actual = "//impl:cargo_raze_bin",
+    visibility = ["//visibility:public"],
+)
+
+alias(
+    name = "bin",
     actual = "//impl:cargo_raze_bin",
     visibility = ["//visibility:public"],
 )
