Fixed the need for cargo on the host when running `//:raze`

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -6,7 +6,7 @@ alias(
 
 alias(
     name = "raze",
-    actual = "//impl:cargo_raze_bin",
+    actual = "//tools:raze",
     visibility = ["//visibility:public"],
 )
 
