--- a/impl/src/rendering/templates/partials/build_script.template
+++ b/impl/src/rendering/templates/partials/build_script.template
@@ -38,6 +38,9 @@ cargo_build_script(
     {%- else %},
     {%- endif %}
     edition = "{{ crate.edition }}",
+    {%- if crate.links %}
+    links = "{{ crate.links }}",
+    {%- endif %}
     {%- if crate.default_deps.build_proc_macro_dependencies %}
     proc_macro_deps = [
     {%- for dependency in crate.default_deps.build_proc_macro_dependencies %}
