--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,28 +1,2 @@
-binop_separator = "Front"
-brace_style = "SameLineWhere"
-combine_control_expr = false
-comment_width = 100
-condense_windcard_suffixes = true
-control_brace_style = "AlwaysSameLine"
-empty_item_single_line = true
-error_on_line_overflow = false
-error_on_line_overflow_comments = false
-fn_args_density = "Tall"
-fn_single_line = false
-force_explicit_abi = true
-force_multiline_blocks = false
-format_strings = true
-hard_tabs = false
-indent_style = "Block"
-match_block_trailing_comma = true
-merge_derives = true
-normalize_comments = false
-reorder_imports = true
-report_fixme = "always"
+# Changing this is too disruptive to git history to be worth it.
 tab_spaces = 2
-where_single_line = false
-wrap_comments = false
-reorder_extern_crates = true
-space_after_colon = true
-space_before_colon = false
-struct_lit_single_line = false
