add example/regression test for build dependency aliases (#405)

--- a/examples/tests/BUILD.bazel
+++ b/examples/tests/BUILD.bazel
@@ -17,6 +17,7 @@ test_suite(
         launch_test(target = "@cargo_raze_examples//vendored/complicated_cargo_library"),
         launch_test(target = "@cargo_raze_examples//vendored/hello_cargo_library"),
         launch_test(target = "@cargo_raze_examples//vendored/non_cratesio_library"),
+        "@cargo_raze_examples//remote/build_dependencies:build_dependencies_test",
         "@cargo_raze_examples//remote/dev_dependencies:dev_dependencies_test",
     ],
     visibility = ["//visibility:public"],
