--- a/impl/src/rendering/templates/partials/common_attrs.template
+++ b/impl/src/rendering/templates/partials/common_attrs.template
@@ -1,11 +1,11 @@
     srcs = glob(["**/*.rs"]),
     {%- if crate.default_deps.aliased_dependencies | length != 0 or crate.targeted_deps | length != 0 %}
     aliases = {
-        {%- for alias in crate.default_deps.aliased_dependencies %}
+        {%- for k, alias in crate.default_deps.aliased_dependencies %}
         "{{alias.target}}": "{{alias.alias}}",
         {%- endfor %}
         {%- for dep in crate.targeted_deps %}
-        {%- for alias in dep.deps.aliased_dependencies %}
+        {%- for k, alias in dep.deps.aliased_dependencies %}
         "{{alias.target}}": "{{alias.alias}}",
         {%- endfor %}
         {%- endfor %}
