Fixed templates to render buildifier compliant sources

--- a/impl/src/rendering/templates/partials/build_script.template
+++ b/impl/src/rendering/templates/partials/build_script.template
@@ -74,7 +74,7 @@ cargo_build_script(
         # {{ targeted_dep.target }}
         (
     {%- for platform_target in targeted_dep.platform_targets %}
-          "@rules_rust//rust/platform:{{platform_target}}",
+            "@{{ rust_rules_workspace_name }}//rust/platform:{{platform_target}}",
     {%- endfor %}
         ): [
     {%- for dependency in targeted_dep.deps.build_dependencies %}
