--- a/impl/src/rendering/templates/partials/targeted_dependencies.template
+++ b/impl/src/rendering/templates/partials/targeted_dependencies.template
@@ -2,7 +2,7 @@
         # {{ targeted_dep.target }}
         (
 {%- for platform_target in targeted_dep.platform_targets %}
-          "@rules_rust//rust/platform:{{platform_target}}",
+            "@{{ rust_rules_workspace_name }}//rust/platform:{{platform_target}}",
 {%- endfor %}
         ): [
 {%- for dependency in targeted_dep.deps.dependencies %}
