--- a/examples/WORKSPACE
+++ b/examples/WORKSPACE
@@ -4,15 +4,17 @@ load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
 http_archive(
     name = "rules_rust",
-    sha256 = "617082067629939c0a22f587811a3e822a50a203119a90380e21f5aec3373da9",
-    strip_prefix = "rules_rust-e07881fa22a5f0d16230d8b23bbff2bf358823b8",
-    # Main branch as of 2022-04-27
-    url = "https://github.com/bazelbuild/rules_rust/archive/e07881fa22a5f0d16230d8b23bbff2bf358823b8.tar.gz",
+    sha256 = "accb5a89cbe63d55dcdae85938e56ff3aa56f21eb847ed826a28a83db8500ae6",
+    strip_prefix = "rules_rust-9aa49569b2b0dacecc51c05cee52708b7255bd98",
+    urls = [
+        # Main branch as of 2021-02-19
+        "https://github.com/bazelbuild/rules_rust/archive/9aa49569b2b0dacecc51c05cee52708b7255bd98.tar.gz",
+    ],
 )
 
 load("@rules_rust//rust:repositories.bzl", "rust_repositories")
 
-rust_repositories(edition="2018")
+rust_repositories()
 
 load("//:repositories.bzl", "repositories")
 
