Add tools attribute for CrateSettings

--- a/impl/src/rendering/templates/partials/build_script.template
+++ b/impl/src/rendering/templates/partials/build_script.template
@@ -54,6 +54,13 @@ cargo_build_script(
         "{{flag}}",
         {%- endfor %}
     ],
+    {%- if crate.raze_settings.build_tools_dependencies %}
+    tools = [
+    {%- for tools in crate.raze_settings.build_tools_dependencies %}
+        "{{tools}}",
+    {%- endfor %}
+    ],
+    {%- endif %}
     tags = [
         "cargo-raze",
         "manual",
