--- a/impl/src/rendering/templates/remote_crates.bzl.template
+++ b/impl/src/rendering/templates/remote_crates.bzl.template
@@ -17,7 +17,11 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         remote = "{{crate.source_details.git_data.remote}}",
         commit = "{{crate.source_details.git_data.commit}}",
         build_file = Label("{{workspace.workspace_path}}/remote:BUILD.{{crate.pkg_name}}-{{crate.pkg_version}}.bazel"),
+{%- if crate.raze_settings.skip_submodules %}
+        init_submodules = False,
+{%- else %}
         init_submodules = True,
+{%- endif %}
         {%- include "templates/partials/remote_crates_patch.template" %}
     )
 {%- else %}
