--- a/impl/BUILD.bazel
+++ b/impl/BUILD.bazel
@@ -34,9 +34,9 @@ _TEST_DATA = glob(["src/**/*.template"]) + [
 ]
 
 _TEST_ENV = {
-    "CARGO": "cargo_raze/$(BINDIR)/$(rootpath //tools:cargo)",
-    "CARGO_HOME": "cargo_raze/$(BINDIR)/$(rootpath //tools:cargo).home",
-    "RUSTC": "cargo_raze/$(BINDIR)/$(rootpath //tools:rustc)",
+    "CARGO": "$(rootpath //tools:cargo)",
+    "CARGO_HOME": "$(rootpath //tools:cargo).home",
+    "RUSTC": "$(rootpath //tools:rustc)",
 }
 
 rust_test(
