--- a/impl/src/rendering/templates/partials/features.template
+++ b/impl/src/rendering/templates/partials/features.template
@@ -15,7 +15,7 @@
     {%- endfor %}
         ],
         "//conditions:default": [],
-    }),
-    {%- endfor -%}
+    })
+    {%- endfor -%},
     {%- endif %}
     
