--- a/impl/src/rendering/templates/partials/build_script.template
+++ b/impl/src/rendering/templates/partials/build_script.template
@@ -13,7 +13,7 @@ cargo_build_script(
         "{{key}}": "{{value}}",
         {%- endfor %}
     },
-    {%- include "templates/partials/features.template" -%}
+    {%- include "templates/partials/features.template" %}
     {%- if crate.build_script_target.path %}
     crate_root = "{{ crate.build_script_target.path }}",
     {%- else %}
