--- a/impl/src/rendering/templates/remote_crates.bzl.template
+++ b/impl/src/rendering/templates/remote_crates.bzl.template
@@ -13,25 +13,25 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {%- if crate.source_details.git_data %}
     maybe(
         new_git_repository,
-        name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
+        name = "{{workspace.gen_workspace_prefix}}__{{crate.download_name | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
         remote = "{{crate.source_details.git_data.remote}}",
         commit = "{{crate.source_details.git_data.commit}}",
-        build_file = Label("{{workspace.workspace_path}}/remote:BUILD.{{crate.pkg_name}}-{{crate.pkg_version}}.bazel"),
+        build_file = Label("{{workspace.workspace_path}}/remote:BUILD.{{crate.download_name}}-{{crate.pkg_version}}.bazel"),
         init_submodules = True,
         {%- include "templates/partials/remote_crates_patch.template" %}
     )
 {%- else %}
     maybe(
         http_archive,
-        name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
+        name = "{{workspace.gen_workspace_prefix}}__{{crate.download_name | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
         url = "{{ crate.source_details.download_url }}",
         type = "tar.gz",
 {%- if crate.sha256 %}
         sha256 = "{{crate.sha256}}",
 {%- endif %}
-        strip_prefix = "{{crate.pkg_name}}-{{crate.pkg_version}}",
+        strip_prefix = "{{crate.download_name}}-{{crate.pkg_version}}",
         {%- include "templates/partials/remote_crates_patch.template" %}
-        build_file = Label("{{workspace.workspace_path}}/remote:BUILD.{{crate.pkg_name}}-{{crate.pkg_version}}.bazel"),
+        build_file = Label("{{workspace.workspace_path}}/remote:BUILD.{{crate.download_name}}-{{crate.pkg_version}}.bazel"),
     )
 {%- endif %}
 {%  endfor %}
