Add support for additional Cargo workspaces
This is how I work around https://github.com/rust-lang/cargo/issues/5042
to get path dependencies into vendored Rust dependencies.

The generated BUILD files are built with
https://github.com/google/cargo-raze/pull/524, because otherwise they
don't work.

This fixes #361.

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -14,7 +14,7 @@ examples_repository()
 
 load("@cargo_raze_examples//:repositories.bzl", examples_repositories = "repositories")
 
-examples_repositories()
+examples_repositories(local_path_prefix = "examples/")
 
 load("@rules_rust//tools/rust_analyzer:deps.bzl", "rust_analyzer_deps")
 
