--- a/impl/src/rendering/templates/remote_crates.bzl.template
+++ b/impl/src/rendering/templates/remote_crates.bzl.template
@@ -6,16 +6,16 @@ load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")  # buildifier: di
 {% if experimental_api %}
 {% include "templates/partials/crates_macro.template" %}
 {% endif %}
-"""
-Args:
-    local_path_prefix: An optional prefix to append to local paths within the Bazel repository.
-        Many uses should use `bazel_workspace_path` in the raze settings instead, this is only
-        for unusual sitations which use the same fetch_remote_crates from multiple repositories.
-"""
 def {{workspace.gen_workspace_prefix}}_fetch_remote_crates(local_path_prefix = ""):
-    _ = local_path_prefix
+    """This function defines a collection of repos and should be called in a WORKSPACE file.
+
+    Args:
+        local_path_prefix: An optional prefix to append to local paths within the Bazel repository.
+            Many uses should use `bazel_workspace_path` in the raze settings instead, this is only
+            for unusual sitations which use the same fetch_remote_crates from multiple repositories.
+    """
+    _unused = local_path_prefix  # @unused
 {%- if crates %}
-    """This function defines a collection of repos and should be called in a WORKSPACE file"""
 {%- for crate in crates %}
 {%- if crate.source_details.git_data %}
     maybe(
@@ -52,7 +52,8 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates(local_path_prefix = "
 {%- endif %}
 {%  endfor %}
 {%- else %}
-    """No crates were detected in the source Cargo.toml. This is a no-op"""
+
+    # No crates were detected in the source Cargo.toml. This is a no-op
     pass
 {% endif %}
 {%- else %}
