--- a/impl/src/rendering/templates/partials/common_attrs.template
+++ b/impl/src/rendering/templates/partials/common_attrs.template
@@ -1,13 +1,8 @@
     srcs = glob(["**/*.rs"]),
     {%- if crate.default_deps.aliased_dependencies | length != 0 or crate.targeted_deps | length != 0 %}
     aliases = {
-        {%- for k, alias in crate.default_deps.aliased_dependencies %}
+        {%- for alias in crate.all_aliases %}
         "{{alias.target}}": "{{alias.alias}}",
-        {%- endfor %}
-        {%- for dep in crate.targeted_deps %}
-        {%- for k, alias in dep.deps.aliased_dependencies %}
-        "{{alias.target}}": "{{alias.alias}}",
-        {%- endfor %}
         {%- endfor %}
     },
     {%- endif %}
